[gd_scene load_steps=9 format=2]

[ext_resource path="res://Img/Crane1-moving-1.png" type="Texture" id=1]
[ext_resource path="res://Crane1.gd" type="Script" id=2]
[ext_resource path="res://Img/Crane1-flip-1.png" type="Texture" id=3]
[ext_resource path="res://Img/Crane1-flip-2.png" type="Texture" id=4]
[ext_resource path="res://Img/Crane1-flipped.png" type="Texture" id=5]
[ext_resource path="res://Img/Crane1-moving-2.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 10.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "flip",
"speed": 2.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": false,
"name": "flipped",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "default-r",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 184.174

[node name="CraneRight" type="Area2D"]
script = ExtResource( 2 )

[node name="CraneRightAnimation" type="AnimatedSprite" parent="."]
scale = Vector2( 1.03081, 1.03081 )
frames = SubResource( 1 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )
[connection signal="area_entered" from="." to="." method="_on_CraneRight_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_CraneRight_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_CraneRight_body_entered"]
